...
                              color: Colors.grey[200],
                              borderRadius: BorderRadius.circular(12),
                            ),
                            child: Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: TextFormField(
                                key: const Key("emailFormField"),
                                controller: emailController,
                                decoration: const InputDecoration(
                                  contentPadding:
                                      EdgeInsets.symmetric(vertical: 15),
                                  border: InputBorder.none,
                                  labelText: 'Email',
...
                            decoration: BoxDecoration(
                                color: Colors.grey[200],
                                borderRadius: BorderRadius.circular(12)),
                            child: Padding(
                              padding: const EdgeInsets.only(left: 5),
                              child: TextFormField(
                                key: const Key("passwordFormField"),
                                controller: passwordController,
                                decoration: InputDecoration(
                                  contentPadding:
                                      const EdgeInsets.symmetric(vertical: 15),
                                  border: InputBorder.none,
                                  labelText: 'Password',
...
                          padding:
                              EdgeInsets.only(top: currentScreenHeight * 0.02),
                          child: SizedBox(
                            width: 350.0,
                            height: 55.0,
                            child: ElevatedButton(
                              key: const Key("loginButton"),
                              style: ElevatedButton.styleFrom(
                                primary: Colors.deepPurple,
                              ),
                              child: const Text(
                                'Login!',
                                style: TextStyle(
...
