...
                              SizedBox(
                                height: currentScreenHeight * 0.03,
                              ),
                              _questionBody(snapshot.data!),
                              const Spacer(),
                              ElevatedButton(
                                key: const Key("finishQuizButton"),
                                style: ElevatedButton.styleFrom(
                                  primary: Colors.deepPurple,
                                ),
                                onPressed: _submit,
                                child: const Text(
                                  "Finish Quiz",
...

  /// Submitting of the attempt
  void _submit() {
    for (TextEditingController controller in _attemptsArray) {
      if (controller.text.isEmpty) {
        setState(() {
          _errorText = "Quiz is incomplete";
        });
        return;
      }
    }
    _future.then((qnsList) {
      db.collection(user!.uid).doc("Quiz Attempts").get().then((doc) {
...
